Corrected and added tests