@@ -11,13 +11,13 @@ class BuilderTest {
 
     @Test
     void getFoodDiscount() {
-        Builder b = new Builder(4, 2, Era.I);
+        Builder b = new Builder(4, 2, Era.I, 0);
         assertEquals(4, b.getFoodDiscount());
     }
 
     @Test
     void getPp() {
-        Builder b = new Builder(4, 2, Era.I);
+        Builder b = new Builder(4, 2, Era.I, 0);
         assertEquals(2, b.getPp());
     }
 
@@ -25,7 +25,7 @@ class BuilderTest {
     void addToPlayer() {
         // Instantiate a player and a card
         Player p = new Player("Gilles");
-        Builder b = new Builder(4, 2, Era.I);
+        Builder b = new Builder(4, 2, Era.I, 0);
 
         // Check it gets added correctly
         assertEquals(0, p.getBuilders().size());
@@ -33,13 +33,13 @@ class BuilderTest {
         assertEquals(1, p.getBuilders().size());
 
         // Check it gets counted correctly
-        assertEquals(b, p.getBuilders().get(0));
+        assertEquals(b, p.getBuilders().getFirst());
     }
 
     @Test
     void toDTO(){
-        Builder b = new Builder(4, 2, Era.I);
-        //needed to check manualy if the print is correct
+        Builder b = new Builder(4, 2, Era.I, 0);
+        //needed to check manually if the print is correct
         for(StringBuilder line : b.toDTO().printCard()){
             System.out.println(line);
         }
